terraform/aws/modules/ec2/internetgateway.tf
resource "aws_internet_gateway" "example_igw" {
  vpc_id = aws_vpc.example_vpc.id

  tags = {
    Name = "Example"
  }
}
