terraform/aws/modules/ec2/routetable.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.example_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.example_igw.id
  }

  tags = {
    Name = "Example"
  }
}
